sourceCompatibility = 1.8
targetCompatibility = 1.8

dependencies {
  implementation libs['fastjson']
  implementation libs['gson']
  implementation libs['jackson_core']
  implementation libs['jackson_databind']
  implementation libs['jackson_annotations']
  implementation libs['jackson_smile']

  implementation libs['jmh']
  implementation libs['jmh-generator-annprocess']
  implementation libs['common-lang']
  implementation libs['cglib']
}
